--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,9 @@ transformers==4.30.2
 pillow-avif-plugin==1.4.3
 xformers
 
+jupyterlab
+pyngrok
+
 -r ./re/re_sd.txt
 -r ./re/re_sd-npu.txt
 -r ./re/re_sd-versions.txt
